  BadColor (invalid Colormap parameter)" anymore when a bad or old
  `.vicerc' file is present.

** MS-DOS changes
-----------------

- The filter for the attach dialog has been fixed to display D64, D71
  D81, G64, G41 and X64 disk image names.

- Cartridge attach and snapshot write dialogs could crashed emulator
  on certain DOS extenders.  This bug has been fixed.

** MS-Windows changes
---------------------

- Disk images can be attached to drives 9..11 too now.


* Changes in VICE 0.16.0
========================

** C64 changes
---------------

- A couple of bugs in the emulation of 6510 CPU core, VIC-II and REU
  have been fixed.

- Final Cartridge, Ocean Cartridge, Super Snapshot 4 and 16KB CRT
  image support has been added.

- Display modes in Ultimax mode have been corrected.

** C128 changes
---------------

- Some memory banking bugs have been fixed (C128 GEOS works).

** VIC20 changes
----------------

- RS232 interface has been added.

** CBM-II changes
-----------------

- A new Commodore 610 (aka CBM-II) emulator has been added.

** Drive changes
----------------

- Drive 9 can be emulated at hardware level.

- The 1571, 1581 and 2031 disk drives are emulated.

- Moved drive ROM images into a separate directory.

- Emulation of drives has been sped up consuming less host CPU power.

** SID changes
--------------

- Dag Lem's enhanched reSID engine is now part of VICE.

- A bug in the random number generator has been fixed.

** Unix changes
---------------

- The "Custom" joystick mapping is now compatible with the German
  keyboard layout, and possibly other non-US layouts.

- Non-default screen depths should really work on X11 now.

- Generation of core dumps can be controlled from command line.

- Smart attaching lynx and zipcode images works correctly now.

** MS-DOS changes
-----------------

- The menu system now uses a CBM-lookalike character set borrowed from
  Star Commander.
